--- a/hslua-module-doclayout.cabal
+++ b/hslua-module-doclayout.cabal
@@ -25,10 +25,13 @@ source-repository head
   location:            https://github.com/hslua/hslua-module-doclayout.git
 
 library
-  build-depends:       base >= 4.9 && < 4.14
+  build-depends:       base           >= 4.9 && < 5
+                     , doclayout      >= 0.3 && < 0.4
+                     , hslua          >= 1.0 && < 1.2
+                     , text           >= 1.0 && < 1.3
   default-language:    Haskell2010
   hs-source-dirs:      src
-  exposed-modules:     HsluaModuleDoclayout
+  exposed-modules:     Foreign.Lua.Module.DocLayout
   ghc-options:         -Wall
                        -Wcompat
                        -Widentities
