--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,6 @@ language: haskell
 git:
   depth: 5
 
-cabal: "2.4"
-
 cache:
   directories:
   - "$HOME/.cabal/store"
@@ -14,7 +12,7 @@ cache:
 
 matrix:
   include:
-  - ghc: 8.8.3
+  - ghc: 8.8.4
     env: STACK_YAML="$TRAVIS_BUILD_DIR/stack.yaml"
   
 install:
@@ -24,7 +22,9 @@ install:
   - |
     curl -sSL https://get.haskellstack.org/ | sh
     stack --version
-    stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --ghc-options=-Werror
+    stack build --system-ghc \
+          --test --no-run-tests \
+          --ghc-options=-Werror
 
 script:
   - >-
