--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,8 +27,10 @@ jobs:
             cabal: '3.2'
           - ghc: '8.8.4'
             cabal: '3.2'
-          - ghc: '8.10.1'
+          - ghc: '8.10.7'
             cabal: '3.2'
+          - ghc: '9.0.1'
+            cabal: '3.4'
 
     steps:
     - uses: actions/checkout@v2
@@ -37,7 +39,7 @@ jobs:
         github.event.action == 'synchronize' ||
         github.event.ref == 'refs/heads/master'
 
-    - uses: actions/setup-haskell@v1
+    - uses: haskell/actions/setup@v1
       name: Setup Haskell
       with:
         ghc-version: ${{ matrix.versions.ghc }}
@@ -51,7 +53,6 @@ jobs:
 
     - name: Build
       run: |
-        cabal v2-update
         cabal v2-build --enable-tests
 
     - name: Test
