--- a/hslua-module-doclayout.cabal
+++ b/hslua-module-doclayout.cabal
@@ -16,11 +16,12 @@ extra-doc-files:     README.md
                      CHANGELOG.md
 extra-source-files:  test/test-doclayout.lua
 tested-with:         GHC == 8.0.2
-                     GHC == 8.2.2
-                     GHC == 8.4.4
-                     GHC == 8.6.5
-                     GHC == 8.8.4
-                     GHC == 8.10.1
+                   , GHC == 8.2.2
+                   , GHC == 8.4.4
+                   , GHC == 8.6.5
+                   , GHC == 8.8.4
+                   , GHC == 8.10.7
+                   , GHC == 9.0.1
 
 source-repository head
   type:                git
