--- a/hslua-module-doclayout.cabal
+++ b/hslua-module-doclayout.cabal
@@ -34,7 +34,7 @@ library
                      , text           >= 1.0 && < 1.3
   default-language:    Haskell2010
   hs-source-dirs:      src
-  exposed-modules:     Foreign.Lua.Module.DocLayout
+  exposed-modules:     HsLua.Module.DocLayout
   ghc-options:         -Wall
                        -Wcompat
                        -Widentities
