--- a/hslua-module-doclayout.cabal
+++ b/hslua-module-doclayout.cabal
@@ -1,4 +1,4 @@
-cabal-version:       2.0
+cabal-version:       2.2
 name:                hslua-module-doclayout
 version:             1.0.4
 synopsis:            Lua module wrapping Text.DocLayout.
@@ -28,14 +28,15 @@ source-repository head
   type:                git
   location:            https://github.com/hslua/hslua-module-doclayout.git
 
-library
-  build-depends:       base           >= 4.9 && < 5
-                     , doclayout      >= 0.2 && < 0.5
-                     , hslua          >= 2.1 && < 2.3
-                     , text           >= 1.0 && < 1.3
+common common-options
+  build-depends:       base              >= 4.9    && < 5
+                     , doclayout         >= 0.2    && < 0.5
+                     , hslua             >= 2.1    && < 2.3
+                     , text              >= 1.2    && < 2.1
+
   default-language:    Haskell2010
-  hs-source-dirs:      src
-  exposed-modules:     HsLua.Module.DocLayout
+  other-extensions:    OverloadedStrings
+                     , TypeApplications
   ghc-options:         -Wall
                        -Wcompat
                        -Widentities
@@ -51,11 +52,17 @@ library
   if impl(ghc >= 8.8)
     ghc-options:       -Wmissing-deriving-strategies
 
+library
+  import:              common-options
+  hs-source-dirs:      src
+  exposed-modules:     HsLua.Module.DocLayout
+  other-extensions:    CPP
+                     , FlexibleInstances
+                     , LambdaCase
+
 test-suite hslua-module-doclayout-test
-  build-depends:       base                    >= 4.9 && < 5
-                     , doclayout               >= 0.2 && < 0.5
-                     , hslua
-                     , hslua-module-doclayout
+  import:              common-options
+  build-depends:       hslua-module-doclayout
                      , tasty
                      , tasty-hunit
                      , tasty-lua               >= 1.0 && < 1.1
@@ -63,21 +70,4 @@ test-suite hslua-module-doclayout-test
   hs-source-dirs:      test
   main-is:             test-hslua-module-doclayout.hs
   build-depends:       hslua-module-doclayout
-  default-language:    Haskell2010
   ghc-options:         -threaded
-                       -rtsopts
-                       -with-rtsopts=-N
-                       -Wall
-                       -Wcompat
-                       -Widentities
-                       -Wincomplete-uni-patterns
-                       -Wincomplete-record-updates
-  if impl(ghc >= 8.0)
-    ghc-options:       -Wredundant-constraints
-  if impl(ghc >= 8.2)
-    ghc-options:       -fhide-source-paths
-  if impl(ghc >= 8.4)
-    ghc-options:       -Wmissing-export-lists
-                       -Wpartial-fields
-  if impl(ghc >= 8.8)
-    ghc-options:       -Wmissing-deriving-strategies
